changes on NoVeg html

--- a/html/lunchVeg.html
+++ b/html/lunchVeg.html
@@ -40,45 +40,45 @@
 
     <main>
       <section class="foodDisplayBreakfast">
-        <h2>Breakfast</h2>
-        <p id="foodDisplayP">Here you find our non Vegan Options</p>
+        <h2>Lunch</h2>
+        <p id="foodDisplayP">Here you find our vegan options</p>
         <div class="foodDisplayIconContainer">
-          <button id="beeren_icecream_minze" class="foodIcon">
+          <button id="button1" class="foodIcon">
             <div class="text-overlay">
               <p>Mint Icecream</p>
               <br />
               <p>Prep time: 15 min</p>
             </div>
           </button>
-          <button id="chocolate_shell_oats" class="foodIcon">
+          <button id="button2" class="foodIcon">
             <div class="text-overlay">
               <p>Chocolate Shell Oats</p>
               <br />
               <p>Prep time: 10 min</p>
             </div>
           </button>
-          <button id="haferschleim" class="foodIcon">
+          <button id="button3" class="foodIcon">
             <div class="text-overlay">
               <p>Porridge</p>
               <br />
               <p>Prep time: 5 min</p>
             </div>
           </button>
-          <button id="hummus_ohne_tahini" class="foodIcon">
+          <button id="button4" class="foodIcon">
             <div class="text-overlay">
               <p>Hummus without Tahini</p>
               <br />
               <p>Prep time: 20 min</p>
             </div>
           </button>
-          <button id="knuspriges_buchweizen_granola" class="foodIcon">
+          <button id="button5" class="foodIcon">
             <div class="text-overlay">
               <p>Crunchy buckwheat granola</p>
               <br />
               <p>Prep time: 7 min</p>
             </div>
           </button>
-          <button id="overnight_oats_mit_skyr" class="foodIcon">
+          <button id="button6" class="foodIcon">
             <div class="text-overlay">
               <p>Oats with Skyr</p>
               <br />
@@ -91,12 +91,282 @@
       <section id="recipeContainer1" class="recipeDisplay">
         <div class="recipeHeader">
           <img
-            src="../images/breakfast/chocolate_shell_oats.jpg"
-            alt="Chocolate Shell Oats"
+            src="../images/breakfast/beeren_icecream_minze.jpg"
+            alt="Mint Icecream"
           />
           <div class="recipeText">
             <div class="recipeInfo">
-              <h3>Chocolate Shell Oats</h3>
+              <h3>Mint Icecream</h3>
+              <p>
+                Fruity overnight oats with persimmons and carrots, hidden under
+                a crunchy chocolate layer
+              </p>
+            </div>
+            <p>Ingredients for 2 servings</p>
+            <ul>
+              <li>80 g fine oat flakes</li>
+              <li>2 tbsp linseed</li>
+              <li>300 ml oat drink (oat milk)</li>
+              <li>salt</li>
+              <li>½ tsp turmeric</li>
+              <li>½ tsp cinnamon</li>
+              <li>persimmons</li>
+              <li>100 g carrots</li>
+              <li>20 g hazelnuts</li>
+              <li>2 tbsp coconut oil</li>
+              <li>1 tbsp cocoa powder</li>
+            </ul>
+          </div>
+        </div>
+        <div class="recipeBody">
+          <h4>Preparation steps</h4>
+          <ol>
+            <li>
+              Mix the oat flakes together with linseed, oat drink and salt,
+              turmeric and cinnamon. Cut the persimmon into small cubes, finely
+              grate the carrot and mix both into the mixture. Then place in the
+              refrigerator for at least 2 hours, preferably overnight.
+            </li>
+            <li>
+              After the waiting time, divide into two glasses, roughly chop the
+              hazelnuts and fold in ⅔ of the kernels. Put coconut oil in a pot
+              and let it melt over a low heat for 3-5 minutes and stir with
+              cocoa powder until smooth.
+            </li>
+            <li>
+              Smooth out the oatmeal and persimmon mixture and pour the coconut
+              oil mixture over it. Swirl the glasses slightly so that a smooth
+              surface forms. As soon as the chocolate layer has set, serve the
+              chocolate shell oats with the remaining hazelnuts.
+            </li>
+          </ol>
+        </div>
+      </section>
+      <section id="recipeContainer2" class="recipeDisplay">
+        <div class="recipeHeader">
+          <img
+            src="../images/breakfast/overnight_oats_mit_skyr.jpg"
+            alt="Overnight_oats_with_Skyr"
+          />
+          <div class="recipeText">
+            <div class="recipeInfo">
+              <h3>Overnight oats with Skyr</h3>
+              <p>
+                Fruity overnight oats with persimmons and carrots, hidden under
+                a crunchy chocolate layer
+              </p>
+            </div>
+            <p>Ingredients for 2 servings</p>
+            <ul>
+              <li>80 g fine oat flakes</li>
+              <li>2 tbsp linseed</li>
+              <li>300 ml oat drink (oat milk)</li>
+              <li>salt</li>
+              <li>½ tsp turmeric</li>
+              <li>½ tsp cinnamon</li>
+              <li>persimmons</li>
+              <li>100 g carrots</li>
+              <li>20 g hazelnuts</li>
+              <li>2 tbsp coconut oil</li>
+              <li>1 tbsp cocoa powder</li>
+            </ul>
+          </div>
+        </div>
+        <div class="recipeBody">
+          <h4>Preparation steps</h4>
+          <ol>
+            <li>
+              Mix the oat flakes together with linseed, oat drink and salt,
+              turmeric and cinnamon. Cut the persimmon into small cubes, finely
+              grate the carrot and mix both into the mixture. Then place in the
+              refrigerator for at least 2 hours, preferably overnight.
+            </li>
+            <li>
+              After the waiting time, divide into two glasses, roughly chop the
+              hazelnuts and fold in ⅔ of the kernels. Put coconut oil in a pot
+              and let it melt over a low heat for 3-5 minutes and stir with
+              cocoa powder until smooth.
+            </li>
+            <li>
+              Smooth out the oatmeal and persimmon mixture and pour the coconut
+              oil mixture over it. Swirl the glasses slightly so that a smooth
+              surface forms. As soon as the chocolate layer has set, serve the
+              chocolate shell oats with the remaining hazelnuts.
+            </li>
+          </ol>
+        </div>
+      </section>
+      <section id="recipeContainer3" class="recipeDisplay">
+        <div class="recipeHeader">
+          <img
+            src="../images/breakfast/smoothie_bowl_mit_blaubeeren.jpg"
+            alt="Smoothie bowl with blueberries"
+          />
+          <div class="recipeText">
+            <div class="recipeInfo">
+              <h3>Smoothie bowl with blueberries</h3>
+              <p>
+                Fruity overnight oats with persimmons and carrots, hidden under
+                a crunchy chocolate layer
+              </p>
+            </div>
+            <p>Ingredients for 2 servings</p>
+            <ul>
+              <li>80 g fine oat flakes</li>
+              <li>2 tbsp linseed</li>
+              <li>300 ml oat drink (oat milk)</li>
+              <li>salt</li>
+              <li>½ tsp turmeric</li>
+              <li>½ tsp cinnamon</li>
+              <li>persimmons</li>
+              <li>100 g carrots</li>
+              <li>20 g hazelnuts</li>
+              <li>2 tbsp coconut oil</li>
+              <li>1 tbsp cocoa powder</li>
+            </ul>
+          </div>
+        </div>
+        <div class="recipeBody">
+          <h4>Preparation steps</h4>
+          <ol>
+            <li>
+              Mix the oat flakes together with linseed, oat drink and salt,
+              turmeric and cinnamon. Cut the persimmon into small cubes, finely
+              grate the carrot and mix both into the mixture. Then place in the
+              refrigerator for at least 2 hours, preferably overnight.
+            </li>
+            <li>
+              After the waiting time, divide into two glasses, roughly chop the
+              hazelnuts and fold in ⅔ of the kernels. Put coconut oil in a pot
+              and let it melt over a low heat for 3-5 minutes and stir with
+              cocoa powder until smooth.
+            </li>
+            <li>
+              Smooth out the oatmeal and persimmon mixture and pour the coconut
+              oil mixture over it. Swirl the glasses slightly so that a smooth
+              surface forms. As soon as the chocolate layer has set, serve the
+              chocolate shell oats with the remaining hazelnuts.
+            </li>
+          </ol>
+        </div>
+      </section>
+      <section id="recipeContainer4" class="recipeDisplay">
+        <div class="recipeHeader">
+          <img
+            src="../images/breakfast/suesskartoffel_toast_avocado_erbsen_pueree.jpg"
+            alt="Sweet potatoe toast with avocado"
+          />
+          <div class="recipeText">
+            <div class="recipeInfo">
+              <h3>Sweet potatoe toast with avocado</h3>
+              <p>
+                Fruity overnight oats with persimmons and carrots, hidden under
+                a crunchy chocolate layer
+              </p>
+            </div>
+            <p>Ingredients for 2 servings</p>
+            <ul>
+              <li>80 g fine oat flakes</li>
+              <li>2 tbsp linseed</li>
+              <li>300 ml oat drink (oat milk)</li>
+              <li>salt</li>
+              <li>½ tsp turmeric</li>
+              <li>½ tsp cinnamon</li>
+              <li>persimmons</li>
+              <li>100 g carrots</li>
+              <li>20 g hazelnuts</li>
+              <li>2 tbsp coconut oil</li>
+              <li>1 tbsp cocoa powder</li>
+            </ul>
+          </div>
+        </div>
+        <div class="recipeBody">
+          <h4>Preparation steps</h4>
+          <ol>
+            <li>
+              Mix the oat flakes together with linseed, oat drink and salt,
+              turmeric and cinnamon. Cut the persimmon into small cubes, finely
+              grate the carrot and mix both into the mixture. Then place in the
+              refrigerator for at least 2 hours, preferably overnight.
+            </li>
+            <li>
+              After the waiting time, divide into two glasses, roughly chop the
+              hazelnuts and fold in ⅔ of the kernels. Put coconut oil in a pot
+              and let it melt over a low heat for 3-5 minutes and stir with
+              cocoa powder until smooth.
+            </li>
+            <li>
+              Smooth out the oatmeal and persimmon mixture and pour the coconut
+              oil mixture over it. Swirl the glasses slightly so that a smooth
+              surface forms. As soon as the chocolate layer has set, serve the
+              chocolate shell oats with the remaining hazelnuts.
+            </li>
+          </ol>
+        </div>
+      </section>
+      <section id="recipeContainer5" class="recipeDisplay">
+        <div class="recipeHeader">
+          <img
+            src="../images/breakfast/suesskartoffel_toasts_frischkaese_avocado.jpg"
+            alt="Crunchy buckwheat granola"
+          />
+          <div class="recipeText">
+            <div class="recipeInfo">
+              <h3>Sweet potatoes with avocado</h3>
+              <p>
+                Fruity overnight oats with persimmons and carrots, hidden under
+                a crunchy chocolate layer
+              </p>
+            </div>
+            <p>Ingredients for 2 servings</p>
+            <ul>
+              <li>80 g fine oat flakes</li>
+              <li>2 tbsp linseed</li>
+              <li>300 ml oat drink (oat milk)</li>
+              <li>salt</li>
+              <li>½ tsp turmeric</li>
+              <li>½ tsp cinnamon</li>
+              <li>persimmons</li>
+              <li>100 g carrots</li>
+              <li>20 g hazelnuts</li>
+              <li>2 tbsp coconut oil</li>
+              <li>1 tbsp cocoa powder</li>
+            </ul>
+          </div>
+        </div>
+        <div class="recipeBody">
+          <h4>Preparation steps</h4>
+          <ol>
+            <li>
+              Mix the oat flakes together with linseed, oat drink and salt,
+              turmeric and cinnamon. Cut the persimmon into small cubes, finely
+              grate the carrot and mix both into the mixture. Then place in the
+              refrigerator for at least 2 hours, preferably overnight.
+            </li>
+            <li>
+              After the waiting time, divide into two glasses, roughly chop the
+              hazelnuts and fold in ⅔ of the kernels. Put coconut oil in a pot
+              and let it melt over a low heat for 3-5 minutes and stir with
+              cocoa powder until smooth.
+            </li>
+            <li>
+              Smooth out the oatmeal and persimmon mixture and pour the coconut
+              oil mixture over it. Swirl the glasses slightly so that a smooth
+              surface forms. As soon as the chocolate layer has set, serve the
+              chocolate shell oats with the remaining hazelnuts.
+            </li>
+          </ol>
+        </div>
+      </section>
+      <section id="recipeContainer6" class="recipeDisplay">
+        <div class="recipeHeader">
+          <img
+            src="../images/breakfast/vollkornbrot_avocadofrischkaese_raeucherlachs.jpg"
+            alt="Bread with avocado and salmon"
+          />
+          <div class="recipeText">
+            <div class="recipeInfo">
+              <h3>Bread with avocado and salmon</h3>
               <p>
                 Fruity overnight oats with persimmons and carrots, hidden under
                 a crunchy chocolate layer
@@ -166,5 +436,6 @@
         </div>
       </div>
     </footer>
+    <script src="/js/script.js"></script>
   </body>
 </html>
