Dinner No veg Rezepte

--- a/html/dinnerNoVeg.html
+++ b/html/dinnerNoVeg.html
@@ -60,25 +60,25 @@
               <p>Prep time: 10 min</p>
             </div>
           </button>
-          <button id="knusperhaehnchen_gurkensalat" class="foodIcon">
+          <button id="knusperhaehnchen_gurkensalat" class="foodIcon" onclick="showChicken()">
             <div class="text-overlay">
               <p>Crispy Chicken with Cucumber salad</p><br>
               <p>Prep time: 5 min</p>
             </div>
           </button>
-          <button id="lachs_tomaten_pasta" class="foodIcon">
+          <button id="lachs_tomaten_pasta" class="foodIcon" onclick="showSalmon()">
             <div class="text-overlay">
               <p>Salmon Tomato Pasta</p><br>
               <p>Prep time: 20 min</p>
             </div>
           </button>
-          <button id="spaghetti_carbonara" class="foodIcon">
+          <button id="spaghetti_carbonara" class="foodIcon" onclick="showCabonara()">
             <div class="text-overlay">
               <p>Spaghetti Carbonara</p><br>
               <p>Prep time: 7 min</p>
             </div>
           </button>
-          <button id="bratwurst_buletten_gemuese" class="foodIcon">
+          <button id="bratwurst_buletten_gemuese" class="foodIcon" onclick="showSausage()">
             <div class="text-overlay">
               <p>Sausagepatties with Vegies</p><br>
               <p>Prep time: 12 hrs</p>
@@ -180,6 +180,189 @@
         </div>
       </section>
 
+      <section class="recipeDisplay" id="crispyChickRecipe">
+        <div class="recipeHeader">
+          <img src="../images/dinner/knusperhaehnchen_gurkensalat.jpg" alt="Crispy Chicken">
+          <div class="recipeText">
+         <div class="recipeInfo">
+            <h3>Crispy Chicken</h3>
+          <p>The Steakhouse Chef Salad is what happens when you take your salad game all the way to the top!</p>
+        </div>
+          <p>
+            Ingredients for 2 servings
+          </p>
+          <ul>
+              <li>3 cups romaine, chopped</li>
+              <li>2 eggs, hard-boiled and halved</li>
+              <li>4 ounces roast beef, diced</li>
+              <li>cheddar, cubed</li>
+              <li>1 handful of cobnuts, cut into small pieces</li>
+              <li>1 cup cherry tomatoes, halved</li>
+              <li>1 Persian cucumber, sliced</li>
+              <li>1 cup croutons</li>
+              <li>Dressing and Condiments of your choice</li>
+          </ul>
+        </div>
+        </div>
+        <div class="recipeBody">
+          <h4>
+          Preparation steps
+        </h4>
+            <ol>
+                <li>
+                  Place the romaine in a large serving bowl or on a large platter. 
+                </li>
+                <li>
+                  Arrange the eggs, the beef, the cheddar, the tomatoes, the Persian cucumber,<br>
+                   and the croutons on top of the lettuce in stripes. 
+                </li>
+                <li>
+                  Season the tomatoes, the cucumber, and the eggs with the salt and the pepper. 
+                </li>
+                <li>
+                  Top with the dressing and serve!
+                </li>
+            </ol>
+        </div>
+      </section>
+
+      <section class="recipeDisplay" id="salmonRecipe">
+        <div class="recipeHeader">
+          <img src="../images/dinner/lachs_tomaten_pasta.jpg" alt="Salmon Tomato Pasta">
+          <div class="recipeText">
+         <div class="recipeInfo">
+            <h3>Salmon Tomato Pasta</h3>
+          <p>The Steakhouse Chef Salad is what happens when you take your salad game all the way to the top!</p>
+        </div>
+          <p>
+            Ingredients for 2 servings
+          </p>
+          <ul>
+              <li>3 cups romaine, chopped</li>
+              <li>2 eggs, hard-boiled and halved</li>
+              <li>4 ounces roast beef, diced</li>
+              <li>cheddar, cubed</li>
+              <li>1 handful of cobnuts, cut into small pieces</li>
+              <li>1 cup cherry tomatoes, halved</li>
+              <li>1 Persian cucumber, sliced</li>
+              <li>1 cup croutons</li>
+              <li>Dressing and Condiments of your choice</li>
+          </ul>
+        </div>
+        </div>
+        <div class="recipeBody">
+          <h4>
+          Preparation steps
+        </h4>
+            <ol>
+                <li>
+                  Place the romaine in a large serving bowl or on a large platter. 
+                </li>
+                <li>
+                  Arrange the eggs, the beef, the cheddar, the tomatoes, the Persian cucumber,<br>
+                   and the croutons on top of the lettuce in stripes. 
+                </li>
+                <li>
+                  Season the tomatoes, the cucumber, and the eggs with the salt and the pepper. 
+                </li>
+                <li>
+                  Top with the dressing and serve!
+                </li>
+            </ol>
+        </div>
+      </section>
+
+      <section class="recipeDisplay" id="cabonaraRecipe">
+        <div class="recipeHeader">
+          <img src="../images/dinner/spaghetti_carbonara.jpg" alt="Spaghetti Carbonara">
+          <div class="recipeText">
+         <div class="recipeInfo">
+            <h3>Spaghetti Carbonara</h3>
+          <p>The Steakhouse Chef Salad is what happens when you take your salad game all the way to the top!</p>
+        </div>
+          <p>
+            Ingredients for 2 servings
+          </p>
+          <ul>
+              <li>3 cups romaine, chopped</li>
+              <li>2 eggs, hard-boiled and halved</li>
+              <li>4 ounces roast beef, diced</li>
+              <li>cheddar, cubed</li>
+              <li>1 handful of cobnuts, cut into small pieces</li>
+              <li>1 cup cherry tomatoes, halved</li>
+              <li>1 Persian cucumber, sliced</li>
+              <li>1 cup croutons</li>
+              <li>Dressing and Condiments of your choice</li>
+          </ul>
+        </div>
+        </div>
+        <div class="recipeBody">
+          <h4>
+          Preparation steps
+        </h4>
+            <ol>
+                <li>
+                  Place the romaine in a large serving bowl or on a large platter. 
+                </li>
+                <li>
+                  Arrange the eggs, the beef, the cheddar, the tomatoes, the Persian cucumber,<br>
+                   and the croutons on top of the lettuce in stripes. 
+                </li>
+                <li>
+                  Season the tomatoes, the cucumber, and the eggs with the salt and the pepper. 
+                </li>
+                <li>
+                  Top with the dressing and serve!
+                </li>
+            </ol>
+        </div>
+      </section>
+
+      <section class="recipeDisplay" id="sausageRecipe">
+        <div class="recipeHeader">
+          <img src="../images/dinner/bratwurst_buletten_gemuese.jpg" alt="Sausage Patties">
+          <div class="recipeText">
+         <div class="recipeInfo">
+            <h3>Sausage Patties</h3>
+          <p>The Steakhouse Chef Salad is what happens when you take your salad game all the way to the top!</p>
+        </div>
+          <p>
+            Ingredients for 2 servings
+          </p>
+          <ul>
+              <li>3 cups romaine, chopped</li>
+              <li>2 eggs, hard-boiled and halved</li>
+              <li>4 ounces roast beef, diced</li>
+              <li>cheddar, cubed</li>
+              <li>1 handful of cobnuts, cut into small pieces</li>
+              <li>1 cup cherry tomatoes, halved</li>
+              <li>1 Persian cucumber, sliced</li>
+              <li>1 cup croutons</li>
+              <li>Dressing and Condiments of your choice</li>
+          </ul>
+        </div>
+        </div>
+        <div class="recipeBody">
+          <h4>
+          Preparation steps
+        </h4>
+            <ol>
+                <li>
+                  Place the romaine in a large serving bowl or on a large platter. 
+                </li>
+                <li>
+                  Arrange the eggs, the beef, the cheddar, the tomatoes, the Persian cucumber,<br>
+                   and the croutons on top of the lettuce in stripes. 
+                </li>
+                <li>
+                  Season the tomatoes, the cucumber, and the eggs with the salt and the pepper. 
+                </li>
+                <li>
+                  Top with the dressing and serve!
+                </li>
+            </ol>
+        </div>
+      </section>
     </main>
 
     <footer  class="footer">
