func and content

--- a/html/dinnerNoVeg.html
+++ b/html/dinnerNoVeg.html
@@ -54,36 +54,42 @@
               <p>Prep time: 15 min</p>
             </div>
           </button>
+
           <button id="chefsalat_steak" class="foodIcon" onclick="showSteak()">
             <div class="text-overlay">
               <p>Steak Chefsalad</p><br>
               <p>Prep time: 10 min</p>
             </div>
           </button>
+
           <button id="knusperhaehnchen_gurkensalat" class="foodIcon" onclick="showChicken()">
             <div class="text-overlay">
               <p>Crispy Chicken with Cucumber salad</p><br>
               <p>Prep time: 5 min</p>
             </div>
           </button>
+
           <button id="lachs_tomaten_pasta" class="foodIcon" onclick="showSalmon()">
             <div class="text-overlay">
               <p>Salmon Tomato Pasta</p><br>
               <p>Prep time: 20 min</p>
             </div>
           </button>
+
           <button id="spaghetti_carbonara" class="foodIcon" onclick="showCabonara()">
             <div class="text-overlay">
               <p>Spaghetti Carbonara</p><br>
               <p>Prep time: 7 min</p>
             </div>
           </button>
+
           <button id="bratwurst_buletten_gemuese" class="foodIcon" onclick="showSausage()">
             <div class="text-overlay">
               <p>Sausagepatties with Vegies</p><br>
               <p>Prep time: 12 hrs</p>
             </div>
           </button>
+
         </div>
       </section>
 
@@ -186,21 +192,23 @@
           <div class="recipeText">
          <div class="recipeInfo">
             <h3>Crispy Chicken</h3>
-          <p>The Steakhouse Chef Salad is what happens when you take your salad game all the way to the top!</p>
+          <p>Crispy Chicken Tenders marinaded in buttermilk then fried (or oven baked!) golden brown are juicy and flavorful with southern seasonings.</p>
         </div>
           <p>
             Ingredients for 2 servings
           </p>
           <ul>
-              <li>3 cups romaine, chopped</li>
-              <li>2 eggs, hard-boiled and halved</li>
-              <li>4 ounces roast beef, diced</li>
-              <li>cheddar, cubed</li>
-              <li>1 handful of cobnuts, cut into small pieces</li>
-              <li>1 cup cherry tomatoes, halved</li>
-              <li>1 Persian cucumber, sliced</li>
-              <li>1 cup croutons</li>
-              <li>Dressing and Condiments of your choice</li>
+              <li>4 chicken breasts , boneless, skinless</li>
+              <li>1 cup buttermilk</li>
+              <li>1 teaspoon hot sauce</li>
+              <li>2 large eggs , beaten</li>
+              <li>2 cups flour</li>
+              <li>2 1/2 teaspoons salt</li>
+              <li>3/4 teaspoon pepper</li>
+              <li>1/8 teaspoon paprika</li>
+              <li>1/8 teaspoon garlic powder</li>
+              <li>1/8 teaspoon baking powder</li>
+              <li>vegetable oil , for frying</li>
           </ul>
         </div>
         </div>
@@ -210,17 +218,18 @@
         </h4>
             <ol>
                 <li>
-                  Place the romaine in a large serving bowl or on a large platter. 
+                  Cut the chicken breasts into four tenders each and soak them in a bowl with the buttermilk and hot sauce for 30 minutes.
+                  Add the eggs to one bowl and the flour and spices to a second bowl.
                 </li>
                 <li>
-                  Arrange the eggs, the beef, the cheddar, the tomatoes, the Persian cucumber,<br>
-                   and the croutons on top of the lettuce in stripes. 
+                  Dip each piece of chicken from the buttermilk bowl to the flour mixture.
+                  Dip it into the eggs then back into the flour mixture.
+                  Shake excess flour gently off and put the chicken onto a baking sheet.
+                  Repeat with all the pieces.
                 </li>
                 <li>
-                  Season the tomatoes, the cucumber, and the eggs with the salt and the pepper. 
-                </li>
-                <li>
-                  Top with the dressing and serve!
+                  Heat the oil (three inches deep) in a dutch oven on medium high heat to 350 degrees.
+                  Fry the chicken in small batches for 5-7 minutes or until golden brown.
                 </li>
             </ol>
         </div>
@@ -232,21 +241,21 @@
           <div class="recipeText">
          <div class="recipeInfo">
             <h3>Salmon Tomato Pasta</h3>
-          <p>The Steakhouse Chef Salad is what happens when you take your salad game all the way to the top!</p>
+          <p>A great way of getting the kids to eat fish! Hide it with pasta in a delicious tomato sauce. It's light but filling.</p>
         </div>
           <p>
             Ingredients for 2 servings
           </p>
           <ul>
-              <li>3 cups romaine, chopped</li>
-              <li>2 eggs, hard-boiled and halved</li>
-              <li>4 ounces roast beef, diced</li>
-              <li>cheddar, cubed</li>
-              <li>1 handful of cobnuts, cut into small pieces</li>
-              <li>1 cup cherry tomatoes, halved</li>
-              <li>1 Persian cucumber, sliced</li>
-              <li>1 cup croutons</li>
-              <li>Dressing and Condiments of your choice</li>
+              <li>300g Pasta</li>
+              <li>15ml Napolina Olive Oil</li>
+              <li>1 onion, finely diced</li>
+              <li>2 garlic cloves, finely diced</li>
+              <li>3 salmon fillets (approx 100g per fillet)</li>
+              <li>350g jar Napolina Tomato & Basil Pasta Sauce</li>
+              <li>Handful of fresh basil</li>
+              <li>Handful of fresh basil</li>
+              <li>Condiments of your choice</li>
           </ul>
         </div>
         </div>
@@ -256,17 +265,21 @@
         </h4>
             <ol>
                 <li>
-                  Place the romaine in a large serving bowl or on a large platter. 
+                  Bring a large pan of water to the boil and season with salt. Add 300g of farfalle pasta and cook until al dente.
+                  Meanwhile, heat 15ml of olive oil in a large pan over a medium to low heat.
                 </li>
                 <li>
-                  Arrange the eggs, the beef, the cheddar, the tomatoes, the Persian cucumber,<br>
-                   and the croutons on top of the lettuce in stripes. 
+                  Finely dice 1 onion and 2 cloves of garlic, fry for 5 minutes until soft.
+                  Add one jar of tomato & basil pasta sauce and simmer gently for a further 5 minutes.
+                  Remove the skin from the cooked salmon.
+                  Carefully flake the flesh onto a separate plate.
                 </li>
                 <li>
-                  Season the tomatoes, the cucumber, and the eggs with the salt and the pepper. 
+                  Drain the cooked pasta then add to the sauce and mix together. Add the flaked salmon then gently stir again.  
+                  Season with salt and pepper.
                 </li>
                 <li>
-                  Top with the dressing and serve!
+                  Serve with some grated Parmesan cheese and shredded basil leaves.
                 </li>
             </ol>
         </div>
@@ -278,21 +291,20 @@
           <div class="recipeText">
          <div class="recipeInfo">
             <h3>Spaghetti Carbonara</h3>
-          <p>The Steakhouse Chef Salad is what happens when you take your salad game all the way to the top!</p>
+          <p>Discover how to make traditional spaghetti carbonara. This classic Italian pasta dish combines a silky cheese sauce with crisp pancetta and black pepper.</p>
         </div>
           <p>
             Ingredients for 2 servings
           </p>
           <ul>
-              <li>3 cups romaine, chopped</li>
-              <li>2 eggs, hard-boiled and halved</li>
-              <li>4 ounces roast beef, diced</li>
-              <li>cheddar, cubed</li>
-              <li>1 handful of cobnuts, cut into small pieces</li>
-              <li>1 cup cherry tomatoes, halved</li>
-              <li>1 Persian cucumber, sliced</li>
-              <li>1 cup croutons</li>
-              <li>Dressing and Condiments of your choice</li>
+              <li>100g pancetta</li>
+              <li>50g pecorino cheese</li>
+              <li>50g parmesan</li>
+              <li>3 large eggs</li>
+              <li>350g spaghetti</li>
+              <li>2 plump garlic cloves, peeled and left whole</li>
+              <li>50g unsalted butter</li>
+              <li>sea salt and freshly ground black pepper</li>
           </ul>
         </div>
         </div>
@@ -302,17 +314,24 @@
         </h4>
             <ol>
                 <li>
-                  Place the romaine in a large serving bowl or on a large platter. 
+                  Put the egg yolks into a bowl, finely grate in the Parmesan, season with pepper, then mix well with a fork and put to one side.
+                  Cut any hard skin off the pancetta and set aside, then chop the meat.
+                  Cook the spaghetti in a large pan of boiling salted water until al dente.
                 </li>
                 <li>
-                  Arrange the eggs, the beef, the cheddar, the tomatoes, the Persian cucumber,<br>
-                   and the croutons on top of the lettuce in stripes. 
+                  Meanwhile, rub the pancetta skin, if you have any, all over the base of a medium frying pan (this will add fantastic flavour, 
+                  or use 1 tablespoon of oil instead), then place over a medium-high heat.
+                  Peel the garlic, then crush with the palm of your hand, add it to the pan and leave it to flavour the fat for 1 minute. Stir in the pancetta, 
+                  then cook for 4 minutes, or until it starts to crisp up.
                 </li>
                 <li>
-                  Season the tomatoes, the cucumber, and the eggs with the salt and the pepper. 
+                  Pick out and discard the garlic from the pan, then, reserving some of the cooking water, drain and add the spaghetti. 
+                  Toss well over the heat so it really soaks up all that lovely flavour, then remove the pan from the heat.
+                  Add a splash of the cooking water and toss well, season with pepper, then pour in the egg mixture - the pan will help to cook the egg gently, 
+                  rather than scrambling it. Toss well, adding more cooking water until it's lovely and glossy.
                 </li>
                 <li>
-                  Top with the dressing and serve!
+                  Serve with a grating of Parmesan and an extra twist of pepper.
                 </li>
             </ol>
         </div>
@@ -324,21 +343,19 @@
           <div class="recipeText">
          <div class="recipeInfo">
             <h3>Sausage Patties</h3>
-          <p>The Steakhouse Chef Salad is what happens when you take your salad game all the way to the top!</p>
+          <p>You are going to love these sausage patties. They are flavorful, herbaceous, and have just a hint of sweetness.</p>
         </div>
           <p>
             Ingredients for 2 servings
           </p>
           <ul>
-              <li>3 cups romaine, chopped</li>
-              <li>2 eggs, hard-boiled and halved</li>
-              <li>4 ounces roast beef, diced</li>
-              <li>cheddar, cubed</li>
-              <li>1 handful of cobnuts, cut into small pieces</li>
-              <li>1 cup cherry tomatoes, halved</li>
-              <li>1 Persian cucumber, sliced</li>
-              <li>1 cup croutons</li>
-              <li>Dressing and Condiments of your choice</li>
+              <li>1 tbsp. Minced Fresh Sage</li>
+              <li>1 tsp. Minced Fresh Thyme</li>
+              <li>1 tsp. Fresh Rosemary</li>
+              <li>1 clove Garlic, Minced</li>
+              <li>1 tbsp. Brown Sugar</li>
+              <li>1 tsp. Salt</li>
+              <li>1 lb. Sausages of choice</li>
           </ul>
         </div>
         </div>
@@ -348,17 +365,13 @@
         </h4>
             <ol>
                 <li>
-                  Place the romaine in a large serving bowl or on a large platter. 
+                  In a large bowl, combine herbs, garlic, sugar, salt, and sausage filling. Using a hand mixer beat the ground pork until well-combined.
                 </li>
                 <li>
-                  Arrange the eggs, the beef, the cheddar, the tomatoes, the Persian cucumber,<br>
-                   and the croutons on top of the lettuce in stripes. 
+                  Shape the patties by gently pressing at the center and working from the center out, turn the patties around in your hand as you shape them until they are uniform.
                 </li>
                 <li>
-                  Season the tomatoes, the cucumber, and the eggs with the salt and the pepper. 
-                </li>
-                <li>
-                  Top with the dressing and serve!
+                  Heat a nonstick skillet over medium-high heat. Cook the patties for 2 minutes on each side or until cooked through.
                 </li>
             </ol>
         </div>
