align footer on bottom

--- a/html/lunchNoVeg.html
+++ b/html/lunchNoVeg.html
@@ -40,7 +40,7 @@
 
     <main>
       <section class="foodDisplayBreakfast">
-        <h2>Breakfast</h2>
+        <h2>Lunch</h2>
         <p id="foodDisplayP">Here you find our non Vegan Options</p>
         <div class="foodDisplayIconContainer">
           <button id="button1" class="foodIcon">
