--- a/html/lunchNoVeg.html
+++ b/html/lunchNoVeg.html
@@ -9,37 +9,43 @@
   </head>
   <body>
     <header>
-      <img src="../images/MoKitchenLogo_bg_d2232a.png" />
+      <a href="index.html"
+        ><img src="../images/MoKitchenLogo_bg_d2232a.png"
+      /></a>
 
       <nav id="navHeader" class="dropdown">
         <button id="buttonBreakfast" class="navButton">
           Breakfast
           <div class="dropdownContent" id="buttonBreakfastContent">
-            <a href="breakfastVeg.html">vegan options</a>
-            <a href="breakfastNoVeg.html">non vegan options</a>
+            <a href="breakfastNoVeg.html" class="nonVeganOptA"
+              >non vegan options</a
+            >
+            <a href="breakfastVeg.html" class="veganOptA">vegan options</a>
           </div>
         </button>
 
         <button id="buttonLunch" class="navButton">
           Lunch
           <div class="dropdownContent" id="buttonLunchContent">
-            <a href="lunchVeg.html">vegan options</a>
-            <a href="lunchNoVeg.html">non vegan options</a>
+            <a href="lunchNoVeg.html" class="nonVeganOptA">non vegan options</a>
+            <a href="lunchVeg.html" class="veganOptA">vegan options</a>
           </div>
         </button>
 
         <button id="buttonDinner" class="navButton">
           Dinner
           <div class="dropdownContent" id="buttonDinnerContent">
-            <a href="dinnerVeg.html">vegan options</a>
-            <a href="dinnerVeg.html">non vegan options</a>
+            <a href="dinnerNoVeg.html" class="nonVeganOptA"
+              >Non-vegan options</a
+            >
+            <a href="dinnerVeg.html" class="veganOptA">Vegan options</a>
           </div>
         </button>
       </nav>
     </header>
 
     <main>
-      <section class="foodDisplayBreakfast">
+      <section class="foodDisplayNoVeg">
         <h2>Lunch</h2>
         <p id="foodDisplayP">Here you find our non Vegan Options</p>
         <div class="foodDisplayIconContainer">
