Added Ata's Content

--- a/html/lunchVeg.html
+++ b/html/lunchVeg.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vegan Lunch</title>
     <link rel="icon" type="image" href="/images/MoKitchenLogo_bg_d2232a.png" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <header>
